--- a/game.html
+++ b/game.html
@@ -13,6 +13,7 @@
   <script defer src="js/game-quiz.js"></script>
   <script defer src="js/game-memory.js"></script>
   <script defer src="js/game-cloze.js"></script>
+  <script defer src="js/catch.js"></script>
 </head>
 <body>
 
@@ -41,6 +42,7 @@
       <button class="seg-btn" data-target="panel-quiz" aria-selected="false">📝 Quiz</button>
       <button class="seg-btn" data-target="panel-memory" aria-selected="false">🧠 Memory</button>
       <button class="seg-btn" data-target="panel-cloze" aria-selected="false">✍️ Fill in</button>
+      <button class="seg-btn" data-target="panel-catch" aria-selected="false"> Catch </button>
     </div>
     
     <section id="panel-quiz" class="top-panel card" role="tabpanel">
