--- a/game.html
+++ b/game.html
@@ -102,6 +102,23 @@
       </div>
       <div id="clozeWrap"></div>
     </section>
+
+     <section id="panel-catch" class="top-panel card" role="tabpanel">
+      <h1>Catch balloons</h1>
+      <div class="hud">
+        <span class="pill"><span class="label">Time</span> <strong id="catchTime">00:00</strong></span>
+        <span class="pill"><span class="label">Correct</span> <strong id="catchCorrect">0</strong></span>
+        <span class="pill"><span class="label">Score</span> <strong id="catchScore">0</strong></span>
+        <span class="pill"><span class="label">Highscore</span> <strong id="catchHigh">0</strong></span>
+      </div>
+      <div class="controls">
+        <label>Category <select id="catchCat"></select></label>
+        <label>Subcategory <select id="catchSub"></select></label>
+        <button id="catchPreview" class="btn">Preview</button>
+        <button id="catchStart" class="btn btn-primary">Start</button>
+      </div>
+      <div id="catchWrap"></div>
+    </section>
   </div>
 </main>
 <script>
