--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Games</title>
+  <title>Games — Wing Hei Chan</title>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
