--- a/game.html
+++ b/game.html
@@ -114,6 +114,7 @@
       <div class="controls">
         <label>Category <select id="catchCat"></select></label>
         <label>Subcategory <select id="catchSub"></select></label>
+        <label>Mode <select id="catchMode"></select></label>
         <button id="catchPreview" class="btn">Preview</button>
         <button id="catchStart" class="btn btn-primary">Start</button>
       </div>
