--- a/game.html
+++ b/game.html
@@ -112,9 +112,15 @@
         <span class="pill"><span class="label">Highscore</span> <strong id="catchHigh">0</strong></span>
       </div>
       <div class="controls">
+        <label>Mode
+          <select id="catchMode">
+            <option value="Letters">Falling letters</option>
+            <option value="Words">Falling words</option>
+          </select>
+        </label>
+
         <label>Category <select id="catchCat"></select></label>
         <label>Subcategory <select id="catchSub"></select></label>
-        <label>Mode <select id="catchMode"></select></label>
         <button id="catchPreview" class="btn">Preview</button>
         <button id="catchStart" class="btn btn-primary">Start</button>
       </div>
