--- a/game.html
+++ b/game.html
@@ -130,6 +130,12 @@
           <div id="catchPlayer" class="catch-player" aria-label="Player" role="img" aria-roledescription="Boy"></div>
         </div>
 
+      <!-- Optional mobile controls -->
+        <div class="controls-row mobile-only" style="margin-top:8px;">
+          <button id="catchLeft" class="btn" aria-label="Move left">◀</button>
+          <button id="catchRight" class="btn" aria-label="Move right">▶</button>
+        </div>
+
       <div id="catchWrap"></div>
     </section>
   </div>
