--- a/game.html
+++ b/game.html
@@ -136,6 +136,12 @@
           <button id="catchRight" class="btn" aria-label="Move right">▶</button>
         </div>
 
+        <!-- Target progress (shows what you've built and what's next) -->
+        <div class="target-row" id="catchTargetRow" aria-live="polite" style="margin:.5rem 0">
+          <span class="label">Target:</span>
+          <span id="catchTarget" class="target-line"></span>
+        </div>
+
       <div id="catchWrap"></div>
     </section>
   </div>
