--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Games — Wing Hei Chan</title>
+  <title>Games</title>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -124,6 +124,14 @@
         <button id="catchPreview" class="btn">Preview</button>
         <button id="catchStart" class="btn btn-primary">Start</button>
       </div>
+
+       <!-- Hint -->
+      <div class="target-row" style="margin:.5rem 0">
+        <span class="label">Hint:</span>
+        <span id="catchHint" class="small"></span>
+      </div>
+
+
        
       <!-- Game field (stage) and player sprite -->
         <div id="catchStage" class="catch-stage" tabindex="0" aria-label="Game area">
