--- a/catch.html
+++ b/catch.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Catch — Wing Hei Chan</title>
+  <title>Catch</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
   <script defer src="js/util.js"></script>   <!-- AppUtil.Timer, SFX, showPreview -->
@@ -29,6 +29,7 @@
           <label>Mode:
             <select id="catchMode">
               <option value="letter">Letter</option>
+              <option value="letter-rounds">Letter (10 words)</option>
               <option value="word">Word</option>
             </select>
           </label>
