--- a/game.html
+++ b/game.html
@@ -129,6 +129,7 @@
       <div class="target-row" style="margin:.5rem 0">
         <span class="label">Hint:</span>
         <span id="catchHint" class="small"></span>
+        <span id="catchRound" class="small" style="margin-left:8px; opacity:.7"></span>
       </div>
 
 
