--- a/game.html
+++ b/game.html
@@ -115,6 +115,7 @@
         <label>Mode
           <select id="catchMode">
             <option value="letter">Letter</option>
+            <option value="letter-rounds">Letter 10 rounds</option>
             <option value="word">Word</option>
           </select>
         </label>
